testdata/baselines/reference/submodule/conformance/jsDeclarationsInterfaces.errors.txt
index.js(4,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(6,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(10,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(31,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(35,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(39,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(43,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(45,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(49,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(53,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(57,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(61,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(65,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(67,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(71,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(75,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(80,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(84,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(87,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(91,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(95,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(100,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(105,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(107,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(111,1): error TS8006: 'interface' declarations can only be used in TypeScript files.
index.js(115,1): error TS8006: 'interface' declarations can only be used in TypeScript files.


==== index.js (26 errors) ====
    // Pretty much all of this should be an error, (since interfaces are forbidden in js),
    // but we should be able to synthesize declarations from the symbols regardless
    
    export interface A {}
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface B {
    ~~~~~~~~~~~~~~~~~~~~
        cat: string;
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface C<T, U> {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        field: T & U;
    ~~~~~~~~~~~~~~~~~
        optionalField?: T;
    ~~~~~~~~~~~~~~~~~~~~~~
        readonly readonlyField: T & U;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        readonly readonlyOptionalField?: U;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        (): number;
    ~~~~~~~~~~~~~~~
        (x: T): U;
    ~~~~~~~~~~~~~~
        <Q>(x: Q): T & Q;
    ~~~~~~~~~~~~~~~~~~~~~
    
    
        new (): string;
    ~~~~~~~~~~~~~~~~~~~
        new (x: T): U;
    ~~~~~~~~~~~~~~~~~~
        new <Q>(x: Q): T & Q;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    
    
        method<Q = number>(): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        method<Q>(a: T & Q): Q & number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        method(a?: number): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        method(...args: any[]): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    
    
        optMethod?(): number;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    interface G {}
    ~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export { G };
    
    interface HH {}
    ~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export { HH as H };
    
    export interface I {}
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    export { I as II };
    
    export { J as JJ };
    export interface J {}
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface K extends I,J {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        x: string;
    ~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface L extends K {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        y: string;
    ~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface M<T> {
    ~~~~~~~~~~~~~~~~~~~~~~~
        field: T;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface N<U> extends M<U> {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        other: U;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface O {
    ~~~~~~~~~~~~~~~~~~~~
        [idx: string]: string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface P extends O {}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface Q extends O {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: "ok";
    ~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface R extends O {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: "ok";
    ~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface S extends O {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: "ok";
    ~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: never;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface T {
    ~~~~~~~~~~~~~~~~~~~~
        [idx: number]: string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface U extends T {}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    
    export interface V extends T {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface W extends T {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: "ok";
    ~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface X extends T {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: "ok";
    ~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface Y {
    ~~~~~~~~~~~~~~~~~~~~
        [idx: string]: {x: number};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: {x: number, y: number};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface Z extends Y {}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface AA extends Y {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: {x: number, y: number};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface BB extends Y {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: {x: 0, y: 0};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    
    export interface CC extends Y {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: string]: {x: number, y: number};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        [idx: number]: {x: 0, y: 0};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.
    